dist_man1_MANS=

if BUILD_BSVCOIND
  dist_man1_MANS+=bsvcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bsvcoin-qt.1
endif

if BUILD_BSVCOIN_CLI
  dist_man1_MANS+=bsvcoin-cli.1
endif

if BUILD_BSVCOIN_TX
  dist_man1_MANS+=bsvcoin-tx.1
endif

if BUILD_BSVCOIN_UTIL
  dist_man1_MANS+=bsvcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BSVCOIN_WALLET
  dist_man1_MANS+=bsvcoin-wallet.1
endif
endif
